<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">THEKEY</string>
    <string name="start_check">开始验证</string>
    <string name="protocol">个人信息使用授权书</string>
    <string name="no_agree">不同意并关闭</string>
    <string name="agree">同意并验证</string>
    <string name="server_client">医院自助服务终端</string>
    <string name="all_select">全选</string>
    <string name="retry">重试</string>
    <string name="back">返回</string>
    <string name="rehome">返回首页</string>
    <string name="cancel">取消</string>
    <string name="seefee">查看账单</string>
    <string name="exit">退出</string>
    <string name="seemoney">查看余额</string>
    <string name="repay">重新支付</string>
    <string name="confirmpay">确认支付</string>
    <string name="pay">支付</string>
    <string name="hospital_mode">医院模式</string>
    <string name="hotl_mode">酒店模式</string>
    <string name="pls_input_idnum">请输入身份证号</string>
    <string name="select_pay_type">选择付款方式</string>
    <string name="net_error">网络连接失败</string>
    <string name="chinese">中文</string>
    <string name="english">English</string>
    <string name="use_pwd">使用密码</string>
    <string name="face_pay">刷脸支付</string>
    <string name="input_pwd">输入密码</string>
    <string name="checking">验证中请稍后</string>
    <string name="face_check_fail">人脸检测失败</string>
    <string name="info_check_fail">身份识别失败</string>
    <string name="pls_select_bill">请选择需要支付的账单</string>
    <string name="payfor_page_1">商品详述：</string>
    <string name="payfor_page_2">诊疗费用</string>
    <string name="payfor_page_3">交易单编号：</string>
    <string name="payfor_page_4">收款方：</string>
    <string name="payfor_page_5">医保个人账户：</string>
    <string name="payfor_page_6">医保统筹支付：</string>
    <string name="payfor_page_7">个人支付：</string>
    <string name="total_pay">总计：</string>
    <string name="total_pay_2">总金额：</string>
    <string name="balance">余额：</string>
    <string name="delete">回退</string>
    <string name="clear">清除</string>
    <string name="pay_buy_finger">指纹支付</string>
    <string name="link_system_error">连接服务器失败</string>
    <string name="check_item_1">正在验证社保卡头像信息</string>
    <string name="check_item_3">正在验证人脸识别</string>
    <string name="check_item_4">正在验证社保卡状态信息</string>
    <string name="check_item_5">正在进行生物体征判断</string>
    <string name="check_item_6">正在验证公安数据源信息</string>
    <string name="check_item_7">正在验证公安数据源信息</string>
    <string name="check_item_8">正在验证国家机密特殊诊断信息</string>
    <string name="check_item_9">正在验证国家机密特殊人员信息</string>
    <string name="check_item_10">正在验证位置信息</string>
    <string name="check_item_11">正在验证CPA信息</string>
    <string name="basic_info">基本信息</string>
    <string name="pres_details">医药处方明细</string>
    <string name="age">年龄：</string>
    <string name="deptname">科别：</string>
    <string name="doctor">医师：</string>
    <string name="diagnosis">初步诊断：</string>
    <string name="treament_date">处方日期：</string>
    <string name="drug_name">药品名称：</string>
    <string name="specification">规格：</string>
    <string name="price_rmb">价格：￥</string>
    <string name="amount_rmb">总计:￥</string>
    <string name="num">数量：</string>
    <string name="usage">用法用量：</string>
    <string name="name">姓名：</string>
    <string name="male">性别：男</string>
    <string name="female">性别：女</string>
    <string name="paying_pls_wating">支付中请稍后...</string>
    <string name="opencv_1">请将脸部置于扫描框内</string>
    <string name="opencv_2">正确</string>
    <string name="opencv_3">请靠近摄像头</string>
    <string name="opencv_4">请向左移动面部</string>
    <string name="opencv_5">请向右移动面部</string>
    <string name="opencv_6">请向下移动面部</string>
    <string name="opencv_7">请向上移动面部</string>
    <string name="opencv_8">请保持不动</string>
    <string name="cancel_pay">秒后自动取消支付</string>
    <string name="user_info">待支付：</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="sh_success_msg">恭喜您身份验证成功!</string>
    <string name="sh_fail_msg">您的身份验证未通过!</string>
    <string name="pay_success_msg">恭喜，您支付成功!</string>
    <string name="pay_fail_mag">抱歉，您的支付失败了!</string>
    <string name="pay_info">向医院支付</string>
    <string name="scan_code_pay">扫码支付</string>
    <string name="pay_1">TKY支付</string>
    <string name="pay_2">支付宝支付</string>
    <string name="pay_3">微信支付</string>
    <string name="switch_acount"><u>切换账号</u></string>
    <string name="pls_input_right_mobile">请输入正确的手机号码</string>
    <string name="pls_input_mobile">请输入手机号码</string>
    <string name="pls_input_vcode">请输入收到的验证码</string>
    <string name="pls_inpug_vcode2">输入手机验证码</string>
    <string name="get_vcode">获取验证码</string>
    <string name="login">登录</string>
    <string name="which_hospital">所属医院：</string>
    <string name="ac_record_title">待结算订单</string>
    <string name="ac_check_title">验证中</string>
    <string name="ac_payfor_title">支付</string>
    <string name="ac_balance_title">余额</string>
    <string name="no_payinfo">您没有待缴费的信息^_^</string>
    <string name="retry_getvcode">S后重新获取</string>
    <string name="getvcode_success">获取验证码成功</string>
    <string name="getvcode_fail">获取验证码失败</string>
    <string name="ac_bill_title">处方详情</string>
    <string name="pls_relogin">请重新登录</string>
    <string name="topay">缴费</string>
    <string name="alert_msg">
\n\t\t\t\t为了保障您的合法权益，请您务必审慎阅读、充分理解授权书条款内容，除非您已阅读并接受本授权书所有条款，否则您无权使用THEKEY身份识别服务。请本人充分理解并同意，"THEKEY身份识别"是基于区块链的动态多维身份识别技术，为互联网开发了一个强大而高效的身份识别工具，其根本目的是提供一个“不可抵赖”和“不可篡改”的身份识别结论，进而建立一个可以互信的互联网世界，并为本人提供优质的服务，在此过程中需要使用本人的相关必要信息，本人同意并授权如下：
	  \n\t\t\t\t一、本人同意并授权，THEKEY可使用本人在身份识别过程中的必要的个人基本信息涵盖姓名、身份证号、联系方式、住址及开展业务所需的数据内容包括就诊数据包括诊断信息、处方等，请确保提供数据为本人真实性数据。
\n\t\t\t\t二、本人同意并授权，个人数据在身份识别完成后将数据上链，THEKEY可对数据进行审计并进行个人信用评估，本人在进行其他业务需要本次数据时，可供本人使用。
\n\t\t\t\t三、本人同意并授权，THEKEY将在在身份识别和数据应用方面，将遵循身份识别的行业规范、现行法律依从、个人隐私保护及国家机密信息保护等原则，进行数据的安全使用的控制。
\n\t\t\t\t四、本人同意并授权您的使用、身份识别、业务发起等行为即视为您已阅读并同意本授权书条款的约束，系统将进行交叉识别校验，并启动智能合约服务。

</string>
</resources>
