<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >
        <include layout="@layout/layout_title_text" android:id="@+id/ll"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dark_blue"
            android:id="@+id/ll_1"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_price"
                android:textSize="@dimen/txt_big"
                android:layout_below="@+id/tv_timer"
                android:textColor="@color/white"
                android:layout_margin="5dp"
                />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_below="@+id/ll_1"
            android:id="@+id/line"
            />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:id="@+id/scv"
            android:background="@color/white"
            android:padding="10dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:background="@color/white"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_1"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_2"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_3"
                        android:gravity="right"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/txt_normal"
                        android:id="@+id/tv_pay_transactionNO"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_4"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="人民医院"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp"
                    android:visibility="gone">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_5"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="¥100元"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_6"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:id="@+id/tv_pay_reim"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:text="@string/payfor_page_7"
                        android:textColor="@color/black"
                        />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/txt_normal"
                        android:id="@+id/tv_pay_payprice"
                        android:layout_weight="1"
                        android:textColor="@color/black"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_middle"
                    android:text="@string/select_pay_type"
                    android:textColor="@color/white"
                    android:background="@color/dark_blue"
                    android:layout_below="@+id/scv"
                    android:padding="10dp"
                    android:id="@+id/tv1"
                    android:visibility="gone"
                    />


            </LinearLayout>
        </ScrollView>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/rg_pay_type"
            android:gravity="center_horizontal"
            android:background="@color/white">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_1"
                android:id="@+id/rb_paytype_tky"
                android:button="@null"
                android:drawableRight="@drawable/rb_buttonicon_black"
                android:layout_margin="5dp"
                android:layout_below="@+id/tv1"
                android:textSize="@dimen/txt_middle"
                android:drawableLeft="@mipmap/tky_icon"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:background="@color/transparent"
                />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pay_3"
                android:id="@+id/rb_paytype_wx"
                android:button="@null"
                android:drawableRight="@drawable/rb_buttonicon_black"
                android:layout_margin="5dp"
                android:layout_below="@+id/tv1"
                android:textSize="@dimen/txt_middle"
                android:drawableLeft="@mipmap/wechat_icon"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:background="@color/transparent"
                />

            <RadioButton
                android:id="@+id/rb_paytype_apliy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv1"
                android:layout_margin="5dp"
                android:button="@null"
                android:drawableLeft="@mipmap/apliy_icon"
                android:drawablePadding="5dp"
                android:drawableRight="@drawable/rb_buttonicon_black"
                android:text="@string/pay_2"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_middle"
                android:background="@color/transparent"/>


        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="50dp"
            android:id="@+id/ll"
            android:layout_alignParentBottom="true"
            android:gravity="center"

            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/btn_right"
                android:layout_margin="20dp"
                android:background="@drawable/round_blue_bg"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:gravity="center"
                android:text="@string/confirmpay"/>
        </LinearLayout>







</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:id="@+id/shadow"
        android:visibility="gone"/>
    <com.yibao.mobileapp.widget.PasswordView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:id="@+id/pwd_view"
        android:layout_margin="10dp"
        android:visibility="gone"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_light_blue_bg"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:id="@+id/ll_window"
        android:visibility="gone"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back"
                android:padding="10dp"
                android:id="@+id/iv_window_cancle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:gravity="center"
                android:textSize="@dimen/txt_middle"
                android:layout_centerInParent="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_pay_by_pwd"
                android:text="@string/use_pwd"
                android:textColor="@color/blue"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_below="@+id/tv_price"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pay_info"
            android:gravity="center"
            android:textSize="@dimen/txt_middle"
            android:layout_margin="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TKY1000.00"
            android:gravity="center"
            android:textSize="@dimen/txt_big"
            android:layout_margin="10dp"
            android:id="@+id/tv_pay_tky"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_below="@+id/tv_price"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:background="@drawable/round_blue_bg"
            android:text="@string/face_pay"
            android:textSize="@dimen/txt_middle"
            android:padding="5dp"
            android:gravity="center"
            android:id="@+id/tv_facepay"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:background="@drawable/round_gray_bg"
            android:text="@string/pay_buy_finger"
            android:textSize="@dimen/txt_middle"
            android:padding="5dp"
            android:gravity="center"
            android:enabled="false"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/ll_ewm"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="5dp"
            android:src="@mipmap/back_black"
            android:id="@+id/iv_ewm_back"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/scan_code_pay"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ewm"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"

        android:layout_marginBottom="0dp"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_small" />

</RelativeLayout>