<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yibao.mobileapp.MainActivity">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <RadioGroup
                    android:id="@+id/rg_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_chinese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:button="@null"
                        android:text="@string/chinese"
                        android:textColor="@color/home_radio_button_text_color"
                        android:textSize="@dimen/txt_middle" />

                    <RadioButton
                        android:id="@+id/rb_english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:button="@null"
                        android:text="@string/english"
                        android:textColor="@color/home_radio_button_text_color"
                        android:textSize="@dimen/txt_middle" />
                </RadioGroup>

            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/thekey_big" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_mobile" />

                    <TextView
                        android:id="@+id/tv_mobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:paddingLeft="5dp"
                        android:singleLine="true"
                        android:text="000000000000"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_middle" />

                    <TextView
                        android:id="@+id/tv_login_swacount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/switch_acount"
                        android:textColor="@color/white"
                        android:textSize="@dimen/txt_middle" />


                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tv_bill_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_middle" />

            <ListView
                android:id="@+id/lv_hospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@color/transparent"
                android:dividerHeight="10dp">

            </ListView>

            <TextView
                android:id="@+id/tv_noinfo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_middle"
                android:text="@string/no_payinfo"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>
